<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MenuActivity" >

    <Button
        android:id="@+id/multiplayer_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singleplayer_button"
        android:layout_centerHorizontal="true"
        android:text="@string/multiplayer_button" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiplayer_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/settings_button" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_button"
        android:layout_centerHorizontal="true"
        android:text="@string/test_button_string" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Press the Back button to quit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/singleplayer_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/menu_titlebar"
        android:layout_marginTop="147dp"
        android:text="@string/singleplayer_button" />

    <TextView
        android:id="@+id/menu_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp" />

</RelativeLayout>